# serverside-keyauth

./: .gitignore  README.md
client-windows/: client-windows.sln
client-windows/client-windows/: client-windows.vcxproj  client-windows.vcxproj.filters  defs.hpp  logger.hpp  main.cpp
server-linux/: CMakeLists.txt  client_handler.hpp  defs.hpp  keyauth.hpp  logger.hpp  packet.hpp  server.cpp
